# aggregated_traces

./: .gitignore  README.md  model-EKG_DF_DELETE_example.plantuml  model-EKG_extension.plantuml  pyproject.toml
aggregated_traces/sparql/: DF+DP_construct_DF.rq  DF+DP_construct_DF_qualified_relation.rq  DF+DP_construct_DP.rq  DF+DP_construct_DP_qualified_relation.rq  DF+DP_construct_temp.rq  check_amount_in_vs_out.rq  construct_entities.rq  get_target_nodes_backward.rq  get_target_nodes_forward.rq  insert_DF+DP_aggregated_entity.ru  insert_DF+DP_qualified_relation.ru  insert_quantity_fraction.ru  quantity_fraction_construct_amount_out.rq  quantity_fraction_construct_fraction.rq  quantity_fraction_construct_sum_amount_out.rq  select_edges.rq  select_nodes.rq
aggregated_traces/utils/: construct_ekg.py  ekg_analysis.py  visualization.py
documentation/: model-EKG_DF_ADD_example.plantuml  model-EKG_DF_Transform_example.plantuml  model-EKG_extension.plantuml
examples/: Trace analysis example.ipynb  test.ttl
examples/data/: example_1_0_event_log.json  example_1_1_event_log.json
notebooks/: Evaluation root cause use case.ipynb  RCA-evaluation-generate_results.py  RCA-evaluation-graph_stats.py  RCA-evaluation-process_results.py  RCA-evaluation-reporting.py  Recall-evaluation-generate_results.py  Recall-evaluation-process_results.py  Recall-evaluation-reporting.py  Trace analysis example.ipynb  Use case recall - evaluation metrics.ipynb  Use case recall - simulation parameter evaluation.ipynb  Use case root cause - evaluation metrics.ipynb  Use case root cause - simulation + evaluation metrics.ipynb  Use case root cause - simulation parameter evaluation.ipynb  utils.py
notebooks/data/: example_1_0_event_log.json
src/aggregated_traces/sparql/: check_amount_in_vs_out.rq  get_target_nodes_forward.rq  insert_DF+DP_aggregated_entity.ru  insert_DF_aggregated_entity.ru  insert_DF_quantity.ru  insert_quantity_fraction.ru  select_edges.rq  select_nodes.rq
src/aggregated_traces/utils/: construct_ekg.py  ekg_analysis.py  visualization.py
tests/data/: ekg1_DF_DP.ttl  ekg1_in.ttl  ekg2_DF_DP.ttl  ekg2_in.ttl  ekg_DF_DP-material.ttl  ekg_DF_DP-product.ttl  ekg_in-material.ttl  ekg_in-product.ttl  ekg_in.ttl
tests/data/complete_trace/: material-DF_DP.ttl  material-log.ttl  product-DF_DP.ttl  product-log.ttl  split_pack-DF_DP.ttl  split_pack-log.ttl
tests/data/event_combinations/: aggregation_ADD_aggregation_ADD-DF_DP.ttl  aggregation_ADD_aggregation_ADD-log.ttl  aggregation_ADD_aggregation_DELETE-DF_DP.ttl  aggregation_ADD_aggregation_DELETE-log.ttl  aggregation_ADD_object-DF_DP.ttl  aggregation_ADD_object-log.ttl  aggregation_ADD_transformation-DF_DP.ttl  aggregation_ADD_transformation-log.ttl  aggregation_DELETE_aggregation_ADD-DF_DP.ttl  aggregation_DELETE_aggregation_ADD-log.ttl  aggregation_DELETE_aggregation_DELETE-DF_DP.ttl  aggregation_DELETE_aggregation_DELETE-log.ttl  aggregation_DELETE_object-DF_DP.ttl  aggregation_DELETE_object-log.ttl  aggregation_DELETE_transformation-DF_DP.ttl  (+17 more)
(+1 files in other folders)
