[project]
name = "aggregated_traces"
version = "0.0.1"
authors = [
  {name = "Mark", email = "m.c.a.v.d.pas@tue.nl"},
]
description = "Package for working with Event Knowledge Graphs including aggregated entities"
readme = "README.md"
requires-python = ">=3.11,<=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ipykernel==7.2.*",
    "matplotlib==3.9.*",
    "networkx==3.6.*",
    "pandas==3.0.*",
    "pygraphviz==1.14",
    "rdflib==7.0.*",
    "oxrdflib==0.4.*",
    "scipy>=1.17.1",
    "pydoe2>=1.3.0",
    "seaborn>=0.13.2",
    "boto3>=1.42.68",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "reportlab>=4.4.10",
]

[project.urls]
Homepage = "https://github.com/gitmpje/aggregated_traces"
Issues = "https://github.com/gitmpje/aggregated_traces/issues"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[tool.uv.sources]
aggregated-event-data = { path = "../../../../mnt/c/users/s158699/documents/phd/experiments/simulation/aggregated_event_data", editable = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "aggregated-event-data",
]
